--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>💋Welccome to my page</title>
+    <title>Welccome to my page</title>
 </head>
 <body>
     <!--to make comment do this-->
