--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Welccome to my page</title>
+    <title>💋Welccome to my page</title>
 </head>
 <body>
     <!--to make comment do this-->
     <hr size="3" noshade>
     <table cellspacing="20">
         <tr>
-            <td><img src="1-modified.png" alt="my profile image" width="150" ></td>
+            <td><img src="1-modifed" alt="my profile image" width="150" ></td>
             <td> <h1>Mostafa mohamed abd el moniem </h1><p><em><strong> Operation manager of nehal pharmacies</p><p>Highly efficient Operations Manager with more than three years of experience supervising multiple teams of employees while planning
                 and maintaining work schedules and updating procedures and policies while performing customer service activities, accounts receivable,
                 billing and payroll duties</p></td>
+            <td><a href="contact.html"><strong>My contact List</strong></a></td>
             
         </tr>
         <tr>
